--- a/cjoli.Server/wwwroot/locales/translation-nl.json
+++ b/cjoli.Server/wwwroot/locales/translation-nl.json
@@ -14,7 +14,7 @@
     "favoriteRemoved": "Favoriete team verwijderd"
   },
   "menu": {
-    "home": "Home",
+    "home": "Startpagina",
     "ranking": "Ranglijst",
     "login": "Inloggen",
     "register": "Registreren",
@@ -26,13 +26,13 @@
     "useCustom": "persoonlijke schatting gebruiken",
     "menu": "Menu",
     "setting": "Instellingen",
-    "admin": "Beheer",
+    "admin": "Administratie",
     "gallery": "Foto's",
     "cast": "Diavoorstelling"
   },
   "home": {
     "tourneyNotConfigured": "Toernooi niet geconfigureerd",
-    "noImage": "Geen foto's van het toernooi"
+    "noImage": "Geen foto's voor het toernooi"
   },
   "gallery": {
     "sendPhoto": "Stuur je foto's",
@@ -42,7 +42,7 @@
   },
   "event": {
     "friendly": "🤝 Vriendschappelijke wedstrijd",
-    "resurfacing": "🚛 IJsbewerking"
+    "resurfacing": "🚛 IJsreparatie"
   },
   "error": {
     "invalid": "{{field}} is ongeldig",
@@ -60,11 +60,11 @@
     "edit": "Bewerken",
     "yes": "Ja",
     "no": "Nee",
-    "newTourney": "Nieuw Toernooi"
+    "newTourney": "Nieuw toernooi"
   },
   "penalty": {
     "label": "Strafpunten",
-    "tooltip_zero": "Geen strafpunt",
+    "tooltip_zero": "Geen strafpunten",
     "tooltip_one": "1 strafpunt",
     "tooltip_other": "{{count}} strafpunten"
   },
@@ -87,9 +87,9 @@
       "confirmPassword": "Bevestig wachtwoord"
     },
     "error": {
-      "invalidLogin": "Ongeldige login",
+      "invalidLogin": "Ongeldige inloggegevens",
       "register": "Accountregistratie mislukt",
-      "update": "Account bijwerken mislukt"
+      "update": "Bijwerken van account mislukt"
     },
     "success": {
       "register": "Account aangemaakt",
@@ -116,7 +116,7 @@
       "secondaryColor": "Secundaire kleur"
     },
     "error": {
-      "update": "Kon team niet bijwerken"
+      "update": "Kan team niet bijwerken"
     }
   },
   "ranking": {
@@ -124,7 +124,10 @@
     "calculation": "Berekening",
     "equality": "Gelijkheid",
     "victory": "Overwinning",
+    "victory-direct": "Directe overwinning",
     "defeat": "Verlies",
+    "defeat-direct": "Direct verlies",
+    "displayPhase": "Faseranglijst weergeven",
     "source": {
       "win": "Meer overwinningen",
       "win-min": "Minder overwinningen",
@@ -134,14 +137,14 @@
       "goalDiff-min": "Slecht doelsaldo",
       "goalDiffDirect": "Beste doelsaldo (direct)",
       "goalDiffDirect-min": "Slecht doelsaldo (direct)",
-      "goalFor": "Meer doelpunten voor",
-      "goalFormin": "Minder doelpunten voor",
-      "goalForDirect": "Meer doelpunten voor (direct)",
-      "goalForDirect-min": "Minder doelpunten voor (direct)",
-      "goalAgainst": "Meer doelpunten tegen",
-      "goalAgainst-min": "Minder doelpunten tegen",
-      "goalAgainstDirect": "Meer doelpunten tegen (direct)",
-      "goalAgainstDirect-min": "Minder doelpunten tegen (direct)",
+      "goalFor": "Meer gescoorde doelpunten",
+      "goalFormin": "Minder gescoorde doelpunten",
+      "goalForDirect": "Meer gescoorde doelpunten (direct)",
+      "goalForDirect-min": "Minder gescoorde doelpunten (direct)",
+      "goalAgainst": "Meer tegendoelpunten",
+      "goalAgainst-min": "Minder tegendoelpunten",
+      "goalAgainstDirect": "Meer tegendoelpunten (direct)",
+      "goalAgainstDirect-min": "Minder tegendoelpunten (direct)",
       "youngest": "Jongste",
       "equal": "Gelijk",
       "penalty": "Minder strafpunten",
@@ -156,11 +159,11 @@
     "total": "Punten",
     "game": "Gespeelde wedstrijden",
     "win": "Overwinningen",
-    "neutral": "Gelijkspel",
+    "neutral": "Gelijke spelen",
     "loss": "Verliezen",
     "goalFor": "Doelpunten voor",
     "goalAgainst": "Doelpunten tegen",
-    "shutOut": "Clean sheet",
+    "shutOut": "Nul gehouden",
     "goalDiff": "Doelsaldo",
     "penalty": "Strafpunten",
     "simulation": "Simulatie",
@@ -184,15 +187,15 @@
   "match": {
     "blockShot": {
       "title": "Score opslaan",
-      "error": "Kan score niet opslaan.<br/>De wedstrijd moet eindigen met een strafschoppenserie.<br/>Geef een winnaar aan."
+      "error": "Kan de score niet registreren.<br/>De wedstrijd moet eindigen in een strafschoppenserie.<br/>Geef een winnaar aan."
     },
     "compare": "Vergelijken",
-    "forfeit": "Verlies door opgave",
+    "forfeit": "Forfait",
     "simulated": "Gesimuleerd resultaat"
   },
   "betScore": {
     "finalScore": "Eindscore",
-    "forecastScore": "Voorspelde score",
+    "forecastScore": "Voorspelling",
     "point": "Punten"
   }
 }
