--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -128,6 +128,7 @@
     "defeat": "Défaite",
     "defeat-direct": "Défaite directe",
     "displayPhase": "Afficher le classement par phase",
+    "displaySquad": "Afficher le classement par groupe",
     "source": {
       "win": "Plus de victoires",
       "win-min": "Moins de victoires",
