--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -101,6 +101,8 @@
     "position": "Position",
     "youngest": "Le plus jeune",
     "select": "Sélectionner une Équipe",
+    "currentSeason": "Saison en cours",
+    "allSeasons": "Toutes les saisons",
     "chart": {
       "general": "Général",
       "timeline": "Chronologie"
