--- a/cjoli.Server/wwwroot/locales/translation-de.json
+++ b/cjoli.Server/wwwroot/locales/translation-de.json
@@ -101,6 +101,8 @@
     "position": "Position",
     "youngest": "Jüngstes",
     "select": "Team auswählen",
+    "currentSeason": "Aktuelle Saison",
+    "allSeasons": "Alle Saisons",
     "chart": {
       "general": "Allgemein",
       "timeline": "Zeitverlauf"
