filter by team in home page

--- a/cjoli.Server/wwwroot/locales/translation-en.json
+++ b/cjoli.Server/wwwroot/locales/translation-en.json
@@ -32,7 +32,8 @@
   },
   "home": {
     "tourneyNotConfigured": "Tourney not configured",
-    "noImage": "No photos for the tourney"
+    "noImage": "No photos for the tourney",
+    "selectTeam": "Select your team to filter"
   },
   "gallery": {
     "sendPhoto": "Send your photos",
